@@ -1,3 +1,7 @@
+2004-05-12  lav
+
+	* format.cc: add "no undo" phrase only if undo is disabled.
+
 2004-05-06  lav
 
 	* edit.cc: use UserReplaceChar.
